src/app/page.module.css
.main {
  padding: 40px 160px;
  min-height: 100vh;
  color: white;
  background: #000c17;
  /* font-family: Roboto; */
}

.description {
  display: flex;
  justify-content: space-between;
  align-items: center;
  font-size: 0.85rem;
  /* max-width: var(--max-width); */
  width: 100%;
  z-index: 2;
  /* font-family: var(--font-mono); */
}

.description a {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 0.5rem;
}

.description p {
  position: relative;
  margin: 0;
  padding: 1rem;
  background-color: rgba(var(--callout-rgb), 0.5);
  border: 1px solid rgba(var(--callout-border-rgb), 0.3);
  border-radius: var(--border-radius);
}

.TrakyoLogo {
  height: 36px;
  width: auto;
}

.landingLogo {
  height: 764px;
  width: auto;
}

.navManu {
  display: flex;
  justify-content: space-around;
  align-items: center;
  gap: 32px;
  font-size: 16px;
}

.center {
  display: flex;
  justify-content: space-between;
  align-items: center;
  height: 90vh;
}

.centerHeading {
  font-size: 48px;
  font-weight: 600;
}

.ContentsubHead {
  font-size: 24px;
}

.centerContent {
  display: flex;
  flex-direction: column;
  justify-content: center;
  gap: 16px;
  width: 648px;
}

.ButtonArea {
  display: flex;
  gap: 25px;
  margin-top: 24px;
}

.androidButton {
  width: 210px;
  height: 56px;
  border-radius: 8px;
  opacity: 0px;
  background: #ffffff;
  border: none;
  color: #0461fe;
  font-size: 16px;
  font-weight: 600;
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 10px;
}

.iosButton {
  width: 210px;
  height: 56px;
  border-radius: 8px;
  opacity: 0px;
  background: #0461fe;
  border: none;
  color: #ffffff;
  font-size: 16px;
  font-weight: 600;
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 10px;
}

.secondPage {
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 40px 160px;
  min-height: 100vh;
  background: #f2f2f2;
}

.aboutHeading {
  font-size: 32px;
  margin-bottom: 22px;
}

.aboutArea {
  display: flex;
  flex-direction: column;
  align-items: center;
  /* justify-content: space-between; */
  height: 100vh;
  /* gap: 50px; */
}

.aboutContent {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  margin-top: 144px;
}

.aboutButton {
  width: auto;
  height: 43px;
  top: 220px;
  left: 915px;
  padding: 12px 24px 12px 24px;
  border-radius: 6px;
  background: #0461fe1a;
  border: none;
  color: #0461fe;
  font-family: Roboto;
  font-size: 16px;
  font-weight: 500;
  line-height: 18.75px;
  text-align: center;
  margin-bottom: 50px;
}

.aboutLanding {
  height: 546px;
  width: auto;
}

.aboutText {
  width: 65%;
  text-align: center;
  font-size: 18px;
  margin-bottom: 80px;
  line-height: 27.49px;
}

.ThirdPage {
  padding: 40px 160px;
  min-height: 100vh;
  background: #f2f2f2;
}

.FeatureCards {
  width: 512px;
  height: 230px;
  /* gap: 15px; */
  border-radius: 16px;
  background: #ffffff;
  margin: 10px;
  padding: 24px;
  display: flex;
  flex-direction: column;
  /* justify-content: center; */
}

.FeatureArea {
  display: flex;
  flex-direction: column;
  align-items: center;
  /* height: 100vh;
  gap: 50px;
  justify-content: center; */
  margin-top: 144px;
}

.FeatureContent {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  /* margin-top: 40px;
  gap: 20px; */
}

.FeatureCardsArea {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}

.cardHeading {
  font-size: 18px;
  font-weight: 600;
  margin-top: 16px;
  margin-bottom: 12px;
}
.cardText {
  font-size: 16px;
}

.forthPage {
  padding: 40px 160px;
  min-height: 100vh;
  background: #f2f2f2;
}

.aboutHowIt {
  font-size: 32px;
  font-weight: 600;
  margin-bottom: 40px;
}

.QuickGuideArea {
  display: flex;
  flex-direction: column;
  align-items: center;
  height: 100vh;
  /* gap: 35px; */
  /* justify-content: center; */
}

.QuickGuide {
  display: flex;
  align-items: center;
  height: 100px;
}

.Dashline {
  border: 1px dashed #0461fe;
  width: 278px;
  height: 0px;
  margin: 3px;
}

.DashDot {
  background: #0461fe;
  width: 14px;
  height: 14px;
  border-radius: 50%;
}

.QuickContentTextHeading {
  font-size: 18px;
  font-weight: 600;
  margin-bottom: 12px;
}

.QuickContentText {
  display: flex;
  justify-content: space-between;
  width: 77%;
  margin-top: 24px;
}
.ContentTextshow {
  width: 309px;
  line-height: 18.75px;
}

.ContentTextArea {
  display: flex;
  flex-direction: column;
  align-items: center;
  /* justify-content: center; */
  text-align: center;
}

.QuickGuideIcon {
  margin: 0px 15px;
}

.QuickGuideContent {
  display: flex;
  /* gap: 35px; */
  flex-direction: column;
  /* justify-content: space-evenly; */
  align-items: center;
  margin-top: 144px;
}

.fifthPage {
  padding: 40px 160px;
  min-height: 100vh;
  background: #f2f2f2;
}

.ContactusGetIn {
  font-size: 24px;
}

.ContactusArea {
  display: flex;
  flex-direction: column;
  align-items: center;
  height: 100vh;
  /* gap: 35px;
  justify-content: center; */
  margin-top: 144px;
}

.Contactus {
  width: 1328px;
  height: 562px;
  /* gap: 10px; */
  border-radius: 24px;
  background: #ffffff;
  display: flex;
  /* justify-content: space-around; */
  align-items: center;
  padding: 24px;
}

.ContactusShow {
  width: 504px;
  height: 522px;
  border-radius: 16px;
  background: linear-gradient(179.52deg, #0461fe 2.28%, #023a98 100%);
  color: #ffffff;
  padding: 24px;
  gap: 30px;
  display: flex;
  flex-direction: column;
}

.Contactuslist {
  display: flex;
  flex-direction: column;
  gap: 32px;
}

.ContactDetails {
  display: flex;
  align-items: center;
  gap: 8px;
}

.ContactusForm {
  height: 522px;
  width: 550px;
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: center;
  margin-left: 130px;
}

.ContactusText {
  line-height: 24.43px;
  width: 390px;
}

.input1 {
  width: 545px;
  height: 56px;
  border-radius: 12px;
  background: #f2f2f2;
  border: none;
  margin-top: 8px;
  padding: 20px;
  font-size: 14px;
  font-weight: 500;
}
.input3 {
  width: 545px;
  height: 134px;
  border-radius: 12px;
  background: #f2f2f2;
  border: none;
  margin-top: 8px;
  padding: 20px;
  font-size: 14px;
  font-weight: 500;
}

.sendButtonArea {
  display: flex;
  justify-content: center;
  align-items: center;
}

.sendButton {
  width: 427px;
  height: 56px;
  border-radius: 8px;
  background: #0461fe;
  border: none;
  color: #ffffff;
  font-size: 16px;
  font-weight: 600;
}

.footer {
  padding: 1rem 8rem;
  background: #000c17;
  height: 384px;
  color: #ffffff;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.footer ul {
  list-style: none;
  padding: 0;
  margin: 0;
}

.footerMenu {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 120px;
}

.footerJoinAs {
  display: flex;
  flex-direction: column;
  gap: 10px;
}

.footerSocialArea {
  width: 40px;
  height: 40px;
  border-radius: 8px;
  background: #0461fe;
}

.footerSocialsShow {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 10px;
}

.SocialLogos{
  height: 40px;
  width: 40px;
}

.footerDownloadArea {
  display: flex;
  flex-direction: column;
  gap: 26px;
}

.footerMenuList {
  display: flex;
  gap: 26px;
  flex-direction: column;
}

@media (max-width: 1024px) {
  .center {
    flex-direction: column-reverse;
  }
  .ButtonArea {
    justify-content: center;
  }

  .aboutContent {
    margin-top: 45px;
  }

  .Contactus {
    flex-direction: column;
    height: 90vh;
    width: 650px;
  }

  .ContactusForm {
    margin-left: 0px;
  }

  .footer {
    justify-content: center;
    gap: 80px;
  }

  .footerMenu {
    gap: 30px;
  }
}

@media (max-width: 600px) {
  .main {
    padding: 40px 60px;
  }

  .TrakyoLogo {
    height: 24px;
  }

  .navManu {
    display: none;
  }

  .center {
    flex-direction: column-reverse;
    justify-content: space-evenly;
  }

  .centerContent {
    width: 350px;
  }

  .centerHeading {
    font-size: 24px;
  }

  .ContentsubHead {
    font-size: 16px;
  }

  .landingLogo {
    width: auto;
    height: 416.06px;
  }

  .ButtonArea {
    justify-content: center;
  }

  .secondPage {
    padding: 40px 60px;
  }

  .aboutLanding {
    height: 416.06px;
  }

  .aboutContent {
    margin-top: 8px;
  }

  .aboutHeading {
    font-size: 26px;
    margin-bottom: 20px;
  }

  .aboutText {
    width: 100%;
    margin-bottom: 144px;
  }

  .aboutButton {
    margin-bottom: 90px;
  }

  .ThirdPage {
    padding: 40px 60px;
  }

  .fifthPage {
    padding: 40px 60px;
  }

  .Contactus {
    flex-direction: column;
    height: 90vh;
    width: 535px;
  }

  .ContactusShow {
    width: 400px;
  }

  .ContactusForm {
    margin-left: 0px;
  }

  .ContactusText {
    width: auto;
  }

  .ContactusTypeName {
    display: flex;
    flex-direction: column;
  }

  .input1 {
    width: 400px;
  }
  .input3 {
    width: 400px;
  }

  .footer {
    justify-content: center;
    gap: 60px;
  }

  .footerMenu {
    gap: 30px;
  }

  .androidButton {
    width: 170px;
  }

  .iosButton {
    width: 170px;
  }
}

@media (max-width: 490px) {
  .main {
    padding: 40px 60px;
  }

  .TrakyoLogo {
    height: 24px;
  }

  .navManu {
    display: none;
  }

  .center {
    flex-direction: column-reverse;
    justify-content: space-evenly;
  }

  .centerContent {
    width: 350px;
  }

  .centerHeading {
    font-size: 24px;
  }

  .ContentsubHead {
    font-size: 16px;
  }

  .landingLogo {
    width: auto;
    height: 416.06px;
  }

  .ButtonArea {
    justify-content: center;
  }

  .secondPage {
    padding: 40px 60px;
  }

  .aboutLanding {
    height: 380px;
    width: 352.04px;
  }

  .aboutContent {
    margin-top: 35px;
  }

  .aboutHeading {
    font-size: 24px;
    margin-bottom: 20px;
  }

  .aboutText {
    width: 100%;
    margin-bottom: 25px;
    font-size: 16px;
  }

  .aboutButton {
    margin-bottom: 50px;
    width: 140px;
  }

  .ThirdPage {
    padding: 40px 60px;
  }

  .FeatureCards {
    width: 380px;
  }
  .FeatureArea {
    margin-top: 90px;
  }

  .fifthPage {
    padding: 40px 60px;
  }

  .Contactus {
    flex-direction: column;
    height: 100vh;
    width: 535px;
    gap: 10px;
  }

  .ContactusArea {
    margin-top: 40px;
  }

  .ContactusShow {
    width: 350px;
  }

  .ContactusForm {
    margin-left: 0px;
  }

  .ContactusText {
    width: auto;
  }

  .ContactusTypeName {
    display: flex;
    flex-direction: column;
  }

  .input1 {
    width: 350px;
  }
  .input3 {
    width: 350px;
  }

  .sendButton {
    width: 350px;
    margin-top: 10px;
  }

  .footer {
    justify-content: center;
    gap: 20px;
  }

  .footerMenu {
    gap: 15px;
  }

  .footerMenuList {
    gap: 16px;
  }

  .footerSocialArea {
    width: 25px;
    height: 25px;
  }

  .SocialLogos{
    height: 25px;
    width: 25px;
  }

  .androidButton {
    width: 130px;
    height: 45px;
  }

  .iosButton {
    width: 130px;
    height: 45px;
  }
}

